Fixed #2943: Reindeer theme button broken in Chrome.
svn changeset:8032/svn branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/button/button.css
+++ b/WebContent/VAADIN/themes/reindeer/button/button.css
@@ -39,6 +39,12 @@ div > .v-button.v-disabled .v-button-caption,
 	height: 21px;
 	padding-top: 5px;
 }
+.v-ch .v-button .v-button-caption,
+.v-ch .v-button .v-icon {
+	position: relative;
+	top: -1px;
+	left: -3px;
+}
 .v-button:focus {
 	background-image: url(img/left-focus.png); /** sprite-ref: buttons */
 	outline: none;
@@ -99,6 +105,10 @@ div > .v-button.v-disabled .v-icon,
 	display: block;
 	float: left;
 	margin-top: 4px;
+}
+.v-ch .v-button .v-icon,
+.v-ch .v-button.v-disabled .v-icon {
+	z-index: 2;
 }
 .v-ff2 .v-button-link .v-icon,
 .v-ff2 .v-button-link.v-disabled .v-icon {
