--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -1690,6 +1690,12 @@ div > .v-button.v-disabled .v-button-caption,
 	height: 21px;
 	padding-top: 5px;
 }
+.v-ch .v-button .v-button-caption,
+.v-ch .v-button .v-icon {
+	position: relative;
+	top: -1px;
+	left: -3px;
+}
 .v-button:focus {
   background-image: url(button/img/button-sprites.png);
   -background-image: url(button/img/button-sprites-ie6.png);
@@ -1758,6 +1764,10 @@ div > .v-button.v-disabled .v-icon,
 	display: block;
 	float: left;
 	margin-top: 4px;
+}
+.v-ch .v-button .v-icon,
+.v-ch .v-button.v-disabled .v-icon {
+	z-index: 2;
 }
 .v-ff2 .v-button-link .v-icon,
 .v-ff2 .v-button-link.v-disabled .v-icon {
